[metadata]
name = fontforge_helper
version = 0.0.1
author = FontForge Org
author_email = github@skef.org
description = A collection of higher-level interfaces to the FontForge API
long_description = file: README.md
long_description_content_type = text/markdown
url = https::/github.com/fontforge/fontforge_helper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts
    Development Status :: 3 :: Alpha

[options]
packages = find:
python_requires = >=3.3
